Implementacion de las reglas y las validaciones para la transaccion de crear un cliente